# DS-Python

./: .env.example  .gitignore  Dropshipping_July_Project_Plan.docx  README.md  clean_dhgate_csv.py  combine_supplier_sources.py  dashboard.py  dashboard_backup.py  dashboard_backup_before_clean_tab_layout.py  dashboard_backup_before_shein_tab.py  dashboard_backup_before_source_tabs.py  dashboard_backup_before_top50_user_friendly.py  dashboard_image_version_backup.py  make_full_verification_queue.py  make_launch_shortlist.py  make_product_test_plan.py  make_verification_queue.py  make_zendrop_search_helper.py  pyproject.toml  requirements.txt  scrape_dhgate_fast.py  scrape_dhgate_full_keyword.py  scrape_dhgate_large.py  scrape_marketplace_manual.py  scrape_shein_full_keyword.py  shein_attach_chrome_tab_capture.py  shein_auto_womens_view_all_capture.py  shein_direct_page_capture.py  shein_manual_capture.py  shein_smart_capture.py  shein_snippet_box_capture.py  shein_womens_clothing_capture.py  verification_dashboard.py  verify_manual_current_zendrop_page.py  verify_products_on_zendrop.py  verify_real_zendrop_products.py  verify_zendrop_url_image.py  zendrop_account_scraper.py  zendrop_manual_capture.py  zendrop_massive_scraper.py  (+3 more)
data/: seed_keywords.txt  supplier_products.csv  supplier_products_combined_100.csv  supplier_products_dhgate_50.csv  supplier_products_zendrop_50.csv
output/: opportunities.csv
src/dropship_researcher/: config.py  ebay.py  main.py  models.py  product_rules.py  reddit_rss.py  scoring.py  supplier_csv.py
tests/: test_scoring.py
(+3 files in other folders)
